# uevejb

./: README.md
eve_jukebox/: CMakeLists.txt  clean.sh
eve_jukebox/src/: CMakeLists.txt  properties.cpp
eve_jukebox/src/cli/: CMakeLists.txt  eveApi.cpp  eveLog.cpp
eve_jukebox/src/eve/: CMakeLists.txt  EveApi.cpp  EveApi.h  EveLog.bak  EveLog.cpp  EveLog.h  EveLog.h.bak  EveLogWatcher.h  EvePlayer.h  EveSov.cpp  EveSov.h
eve_jukebox/src/ui/: CMakeLists.txt  assets.qrc  controller.cpp  controller.h  eve_jukebox.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  otf2ttf.sh
eve_jukebox/src/ui/assets/ui/: main.qml  options.qml  settings.js
